@@ -142,7 +142,10 @@ def test_domain_cpp_ast_expressions():
     def exprCheck(expr, id, id4=None):
         ids = 'IE1CIA%s_1aE'
         # call .format() on the expr to unescape double curly braces
-        idDict = {2: ids % expr.format(), 3: ids % id}
+        if id is not None:
+            idDict = {2: ids % expr.format(), 3: ids % id}
+        else:
+            idDict = {2: ids % expr.format(), 3: None}
         if id4 is not None:
             idDict[4] = ids % id4
         check('class', 'template<> {key}C<a[%s]>' % expr, idDict)
@@ -151,14 +154,15 @@ def test_domain_cpp_ast_expressions():
             cpp_id_attributes = ["id_attr"]
             cpp_paren_attributes = ["paren_attr"]
 
-        parser = DefinitionParser(expr, location=None,
+        parser = DefinitionParser(expr.format(), location=None,
                                   config=Config())
         parser.allowFallbackExpressionParsing = False
         ast = parser.parse_expression()
         res = str(ast)
-        if res != expr:
+        if res != expr.format():
             print("")
             print("Input:    ", expr)
+            print("FInput:   ", expr.format())
             print("Result:   ", res)
             raise DefinitionError("")
         displayString = ast.get_display_string()
@@ -166,6 +170,7 @@ def test_domain_cpp_ast_expressions():
             # note: if the expression contains an anon name then this will trigger a falsely
             print("")
             print("Input:    ", expr)
+            print("FInput:   ", expr.format())
             print("Result:   ", res)
             print("Display:  ", displayString)
             raise DefinitionError("")
@@ -355,6 +360,21 @@ def test_domain_cpp_ast_expressions():
 
     # pack expansion
     exprCheck('a(b(c, 1 + d...)..., e(f..., g))', 'cl1aspcl1b1cspplL1E1dEcl1esp1f1gEE')
+
+    # requires expressions
+    requires_v4_id = 'missing-requires-expression-mangling--dont-rely-on-this-link'
+    exprCheck('requires {{}}', None, requires_v4_id)
+    exprCheck('requires {{ typename T::type; }}', None, requires_v4_id)
+    exprCheck('requires {{ {{ a++ }}; }}', None, requires_v4_id)
+    exprCheck('requires {{ {{ a++ }} noexcept; }}', None, requires_v4_id)
+    exprCheck('requires {{ {{ a++ }} -> int; }}', None, requires_v4_id)
+    exprCheck('requires {{ {{ a++ }} noexcept -> int; }}', None, requires_v4_id)
+    exprCheck('requires {{ requires C<T>; }}', None, requires_v4_id)
+    exprCheck('requires {{ a++; }}', None, requires_v4_id)
+    exprCheck('requires {{ typename T::type;'
+              ' {{ a++ }} noexcept -> int;'
+              ' requires C<T>;'
+              ' a++; }}', None, requires_v4_id)
 
 
 def test_domain_cpp_ast_type_definitions():
